[tool.poetry]
name = "coinbase-market-data-feeds"
version = "0.1.0"
description = ""
authors = ["Stig-Martin Liavåg <stigmartin94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
websockets = "^11.0.3"
sqlalchemy = "^2.0.21"
pandas = "^2.1.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
ruff = "^0.0.290"
black = "^23.9.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
